--- a/web/static/style.css
+++ b/web/static/style.css
@@ -11,6 +11,75 @@ body {
     font-family: 'Tiny5';
 }
 
+.container {
+    display: flex;
+    flex-direction: column;
+}
+
+.grid-display {
+    display: flex;
+    flex-direction: row;
+    gap: 25px;
+}
+
+.forum-text {
+    font-size: 18px;
+    color: aliceblue;
+}
+
+.forum-link {
+    font-size: 18px;
+    color: var(--light);
+}
+
+.forum-link:hover {
+    text-decoration: underline;
+    cursor: pointer;
+    color: var(--light-hover);
+}
+
+.forum-elem {
+    width: 200px;
+    height: 250px;
+    background-color: var(--bg-dark);
+    border-radius: 5%;
+    padding-inline: 2%;
+    transition: 0.3s;
+}
+
+.forum-elem:hover {
+    transform: translateY(-3px);
+}
+
+.forum-embed {
+    padding: 10%;
+    display: inline;
+}
+
+.forum-content p {
+    font-size: 16px;
+    color: aliceblue;
+    font-family: 'Lato';
+    transform: translateY(-55px);
+}
+
+.forum-btn {
+    padding:10px 15px;
+    border-radius: 5px;
+    background-color: var(--light);
+    color: var(--bg-dark);
+    transition: 0.3s;
+    font-size: 18px;
+    font-family: 'Tiny5';
+    font-weight: 600;
+}
+
+.forum-btn:hover {
+    cursor: pointer;
+    border-color: aliceblue;
+    transform: scale(1.05);
+    font-weight: 800;
+}
 
 .navbar {
     display: flex;
