fix regex check js

--- a/web/static/style.css
+++ b/web/static/style.css
@@ -194,3 +194,10 @@ body {
     cursor: pointer;
     color: var(--light-hover);
 }
+
+.text-hint {
+    color: aliceblue;
+    font-size: 20px;
+    font-weight: 400;
+    font-family: 'Lato';
+}
